--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,10 +6,6 @@
     "emitDeclarationOnly": true,
     "outDir": "dist"
   },
-  "include": [
-    "src",
-  ],
-  "exclude": [
-    "**/__tests__/**/*"
-  ]
+  "include": ["src"],
+  "exclude": ["**/__tests__/**/*"]
 }
