--- a/.github/workflows/build-benchmark.yml
+++ b/.github/workflows/build-benchmark.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Install packages dependencies
         run: npm install
 
-      - name: build-benchmark
-        run: npm run build:benchmark
+      - name: build-demo
+        run: npm run build:demo
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -44,7 +44,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./benchmark-dist/
+          path: ./demo-dist/
 
       - name: Deploy to GitHub Pages
         id: deployment
