--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "main": "dist/opfs-tools.umd.cjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "vite benchmark",
+    "dev": "vite demo",
     "test": "vitest",
     "build": "vite build && tsc -p tsconfig.build.json && node build/gen-api.js",
-    "build:benchmark": "vite build --config vite.benchmark-config.ts",
+    "build:demo": "vite build --config vite.demo-config.ts",
     "prepublishOnly": "yarn build",
     "preview": "vite preview"
   },
