feat: build with vite

--- a/demo/explorer/package.json
+++ b/demo/explorer/package.json
@@ -15,11 +15,8 @@
     "react-dom": "18.1.0",
     "react-scripts": "5.0.1"
   },
-  "devDependencies": {
-    "typescript": "4.1.3"
-  },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "vite",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -29,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "vite": "^5.1.3"
+  }
 }
