--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dev": "vite demo",
     "test": "vitest",
     "build": "vite build && tsc -p tsconfig.build.json && node build/gen-api.js",
+    "build:watch": "tsc -p tsconfig.build.json && vite build --watch --emptyOutDir false",
     "build:demo": "vite build --config vite.demo-config.ts",
     "prepublishOnly": "yarn build",
     "preview": "vite preview"
@@ -33,13 +34,10 @@
     "dist"
   ],
   "devDependencies": {
-    "@minoru/react-dnd-treeview": "^3.4.4",
-    "@vitest/browser": "^1.2.1",
-    "react": "^18.2.0",
-    "react-dnd": "^16.0.1",
+    "@vitest/browser": "^1.3.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vitest": "^1.2.1",
+    "vitest": "^1.3.0",
     "webdriverio": "^8.28.8",
     "zx": "^7.2.3"
   }
