--- a/demo/explorer/package.json
+++ b/demo/explorer/package.json
@@ -7,13 +7,12 @@
   "dependencies": {
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
-    "@minoru/react-dnd-treeview": "2.0.0-alpha.6",
+    "@minoru/react-dnd-treeview": "^2.0.0-alpha.6",
     "@mui/icons-material": "5.6.2",
     "@mui/material": "5.6.4",
     "react": "18.1.0",
     "react-dnd": "16.0.1",
-    "react-dom": "18.1.0",
-    "react-scripts": "5.0.1"
+    "react-dom": "18.1.0"
   },
   "scripts": {
     "dev": "vite",
@@ -28,6 +27,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
+    "typescript": "^5.3.3",
     "vite": "^5.1.3"
   }
 }
