--- a/demo/explorer/package.json
+++ b/demo/explorer/package.json
@@ -10,6 +10,7 @@
     "@minoru/react-dnd-treeview": "^2.0.0-alpha.6",
     "@mui/icons-material": "5.6.2",
     "@mui/material": "5.6.4",
+    "mui-file-input": "^4.0.4",
     "react": "18.1.0",
     "react-dnd": "16.0.1",
     "react-dom": "18.1.0"
