--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   ],
   "devDependencies": {
     "@vitest/browser": "^1.3.0",
+    "idb": "^8.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vitest": "^1.3.0",
