--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dist"
   ],
   "devDependencies": {
+    "@changesets/cli": "^2.27.7",
     "@vitest/browser": "^1.3.0",
     "idb": "^8.0.0",
     "typescript": "^5.2.2",
